--- a/extension/popup.html
+++ b/extension/popup.html
@@ -50,6 +50,17 @@
       </div>
     </div>
 
+    <!-- Keybinds Section -->
+    <div class="bg-white rounded-lg shadow-sm p-4 mb-4">
+      <h2 class="text-sm font-medium text-gray-700 mb-2">Keybinds</h2>
+      <div class="grid grid-cols-2 gap-x-2">
+        <p class="text-sm text-gray-600">SmartPaste</p>
+        <p class="text-sm text-gray-600">Ctrl + Shift + S</p>
+        <p class="text-sm text-gray-600">Open Quick Prompt</p>
+        <p class="text-sm text-gray-600">Ctrl + Alt + Space</p>
+      </div>
+    </div>
+
     <!-- Status Section -->
     <div class="bg-white rounded-lg shadow-sm p-4 mb-4">
       <h2 class="text-sm font-medium text-gray-700 mb-2">Status</h2>
